# bunghole

./: .gitignore  ARCHITECTURE_LINUX.md  ARCHITECTURE_MACOS.md  CMakeLists.txt  GUEST_CONFIG.md  LICENSE  MACOS_VM_AUDIO.md  README.md  architecture.md  audio.go  audio_darwin.go  audio_linux.go  capture.go  capture_darwin.go  capture_linux.go  clipboard.go  clipboard_darwin.go  clipboard_linux.go  encode.go  go.mod  go.sum  input.go  input_darwin.go  input_linux.go  main.go  peer.go  platform_darwin.go  platform_linux.go  types.go  vm_capture_darwin.go  vm_darwin.go  vm_darwin.m  vm_input_darwin.go  vm_input_darwin.m  vm_other.go  xserver.go  xserver_linux.go
cmd/bunghole/: factories_darwin.go  factories_linux.go  main.go
cmd/bunghole-vm-audio/: main.go
cmd/bunghole-vm-clipboard/: main.go  session_darwin.go
cvendor/: cuda_defs.h  nvfbc.h
docker/: .dockerignore  Dockerfile  docker-compose.yml
driver/BungholeAudio/: BungholeAudioDriver.c  Info.plist  install.sh  uninstall.sh
internal/audio/: pulse_linux.go  sck_darwin.go  sck_darwin.m  stub_darwin.go  udp_capture.go  vsock_capture.go  vsock_capture_other.go  vsock_conn_darwin.go  vsock_frame.go
internal/capture/: nvfbc_linux.go  sck_darwin.go  sck_darwin.m  xshm_linux.go
internal/clipboard/: ns_darwin.go  ns_darwin.m  vsock_darwin.go  x11_linux.go
internal/encode/: ffmpeg_linux.go  vtb_darwin.go
internal/input/: iokit_darwin.go  xtest_linux.go
internal/platform/: config.go  platform_darwin.go  platform_linux.go
internal/server/: server.go
internal/session/: session.go
internal/tls/: selfsigned.go
internal/types/: types.go
internal/vm/: capture_darwin.go  input_darwin.go  input_darwin.m  vm_darwin.go  vm_darwin.m  vm_other.go  vsock_darwin.go  vsock_darwin.m
internal/xserver/: xserver_linux.go
scripts/: rebase-opus.sh  vm-audio-stage.sh
vm/guest-audio/: com.bunghole.vmaudio.plist.template  install.sh  uninstall.sh
web/: bridge.js  embed.go  index.html
web/config/: linux_desktop.json  macos_desktop.json  macos_vm.json
